[gd_scene load_steps=27 format=3 uid="uid://8v4p26gkfffe"]

[ext_resource type="Script" path="res://Scripts/PauseMenuUIScript.gd" id="1_4tn5s"]
[ext_resource type="Texture2D" uid="uid://1mdmi31fa1sd" path="res://Assets/Images/hud/OneDrive_1_4-12-2023/elixirHotWheel/howWheelShadow.png" id="2_dp87i"]
[ext_resource type="Texture2D" uid="uid://21i7c7wta0px" path="res://Assets/Images/NewUI/Asset_5.png" id="3_b2hn0"]
[ext_resource type="FontFile" uid="uid://nabevsfcidt2" path="res://Assets/Font/DINCondensed-Bold.ttf" id="3_k8g8n"]
[ext_resource type="Texture2D" uid="uid://b4t60xief8rpo" path="res://Assets/Images/NewUI/Asset_8.png" id="4_bddgm"]
[ext_resource type="Texture2D" uid="uid://cwgm2bixv5c2v" path="res://Assets/Images/NewUI/Asset_10.png" id="5_deeoo"]
[ext_resource type="Texture2D" uid="uid://dvjdkydhsywwb" path="res://Assets/Images/NewUI/Asset_9.png" id="6_7hgej"]
[ext_resource type="Texture2D" uid="uid://by75608g1tc2r" path="res://Assets/Images/NewUI/Asset_11.png" id="7_fammt"]
[ext_resource type="Texture2D" uid="uid://dkt5gnnsmw6au" path="res://Assets/Images/NewUI/Asset_13.png" id="8_yd5c0"]
[ext_resource type="Texture2D" uid="uid://ddf886xinuyu2" path="res://Assets/Images/NewUI/Asset_12.png" id="9_djfc5"]
[ext_resource type="Texture2D" uid="uid://bhbsd8as36kkx" path="res://Assets/Images/NewUI/Asset_14.png" id="10_mmci5"]
[ext_resource type="Texture2D" uid="uid://bcu284ntms1df" path="res://Assets/Images/NewUI/Asset_16.png" id="11_uven2"]
[ext_resource type="Texture2D" uid="uid://dxmmt5ahakn2r" path="res://Assets/Images/NewUI/Asset_15.png" id="12_oo55u"]
[ext_resource type="Texture2D" uid="uid://b5xvjiaoug3pn" path="res://Assets/Images/hud/OneDrive_1_4-12-2023/controlsKey/controlsKeyShadow.png" id="13_dsv6b"]
[ext_resource type="Texture2D" uid="uid://cef87jys35b1k" path="res://Assets/Images/NewUI/Asset_6.png" id="13_wx88a"]
[ext_resource type="Texture2D" uid="uid://c0v0q5qpxvspg" path="res://Assets/Images/hud/OneDrive_1_4-12-2023/controlsKey/controlsKeyV7.png" id="14_1bst7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g20qm"]

[sub_resource type="Gradient" id="Gradient_a2ki7"]
offsets = PackedFloat32Array(0.0104167, 1)
colors = PackedColorArray(0, 0, 0, 0.156863, 0, 0, 0, 0.862745)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xnckx"]
gradient = SubResource("Gradient_a2ki7")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8s6tp"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhv31"]
bg_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m0ub4"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gaekr"]
bg_color = Color(0.65, 0.65, 0.65, 1)

[sub_resource type="Gradient" id="Gradient_wt7nc"]
offsets = PackedFloat32Array(0.0104167, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.862745)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fi7mb"]
gradient = SubResource("Gradient_wt7nc")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oc8fu"]
bg_color = Color(1, 1, 1, 1)

[node name="PauseMenuUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
mouse_filter = 1
script = ExtResource("1_4tn5s")

[node name="BrownGradient" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -225.0
offset_right = 225.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(225, 225)
texture = ExtResource("2_dp87i")
expand_mode = 1

[node name="BlackVignette" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_g20qm")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -855.0
offset_top = -480.0
offset_right = 855.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_xnckx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"SoundFXMain"

[node name="PauseBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -346.667
offset_right = 296.0
offset_bottom = 468.333
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.85, 0.85)
texture = ExtResource("3_b2hn0")

[node name="Resume" type="TextureButton" parent="PauseBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -165.5
offset_right = 138.0
offset_bottom = -98.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_bddgm")
texture_pressed = ExtResource("5_deeoo")
texture_hover = ExtResource("6_7hgej")

[node name="Controls" type="TextureButton" parent="PauseBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -65.5
offset_right = 138.0
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_fammt")
texture_pressed = ExtResource("8_yd5c0")
texture_hover = ExtResource("9_djfc5")

[node name="MainMenu" type="TextureButton" parent="PauseBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = 34.5
offset_right = 138.0
offset_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("10_mmci5")
texture_pressed = ExtResource("11_uven2")
texture_hover = ExtResource("12_oo55u")

[node name="Fullscreen" type="TextureButton" parent="PauseBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = 169.5
offset_right = 137.0
offset_bottom = 202.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("13_wx88a")

[node name="Music" type="TextureButton" parent="PauseBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = 225.5
offset_right = 137.0
offset_bottom = 258.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("13_wx88a")

[node name="SFX" type="TextureButton" parent="PauseBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = 282.5
offset_right = 137.0
offset_bottom = 315.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("13_wx88a")

[node name="Controls" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1122.67
offset_top = -266.667
offset_right = -922.667
offset_bottom = -186.667
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k8g8n")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_8s6tp")
theme_override_styles/hover = SubResource("StyleBoxFlat_uhv31")
text = "Controls"

[node name="ToggleMusic" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1134.67
offset_top = -358.667
offset_right = -1034.67
offset_bottom = -293.667
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k8g8n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_m0ub4")
theme_override_styles/hover = SubResource("StyleBoxFlat_gaekr")
text = "Music"

[node name="ToggleSFX" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1012.0
offset_top = -361.333
offset_right = -912.0
offset_bottom = -296.333
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k8g8n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_m0ub4")
theme_override_styles/hover = SubResource("StyleBoxFlat_gaekr")
text = "SFX"

[node name="ToggleFullscreen" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1089.33
offset_top = -92.0
offset_right = -959.333
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k8g8n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_m0ub4")
theme_override_styles/hover = SubResource("StyleBoxFlat_gaekr")
text = "Fullscreen"

[node name="MainMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1089.33
offset_top = -158.667
offset_right = -959.333
offset_bottom = -108.667
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_k8g8n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_m0ub4")
theme_override_styles/hover = SubResource("StyleBoxFlat_gaekr")
text = "Main Menu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="MainMenu"]
bus = &"SoundFXMain"

[node name="item sounds" type="AudioStreamPlayer2D" parent="."]
bus = &"SoundFXMain"

[node name="ControlsGraphic" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_g20qm")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -851.0
offset_top = -480.0
offset_right = 1069.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.89, 0.89)
texture = SubResource("GradientTexture2D_fi7mb")

[node name="ControlsGradient" type="TextureRect" parent="ControlsGraphic"]
layout_mode = 1
offset_left = 1.1235
offset_right = 1922.12
offset_bottom = 1086.0
texture = ExtResource("13_dsv6b")

[node name="ControlsGraphicText" type="TextureRect" parent="ControlsGraphic/ControlsGradient"]
layout_mode = 0
offset_left = 176.906
offset_top = 23.97
offset_right = 1684.91
offset_bottom = 995.97
texture = ExtResource("14_1bst7")

[node name="BackButton" type="Button" parent="ControlsGraphic/ControlsGradient"]
layout_mode = 0
offset_left = 869.663
offset_top = 975.281
offset_right = 1039.66
offset_bottom = 1035.28
theme_override_colors/font_color = Color(0.231373, 0.137255, 0.0745098, 1)
theme_override_fonts/font = ExtResource("3_k8g8n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_oc8fu")
theme_override_styles/hover = SubResource("StyleBoxFlat_uhv31")
text = "Back"

[connection signal="pressed" from="PauseBackground/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseBackground/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="PauseBackground/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseBackground/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="PauseBackground/Music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="PauseBackground/SFX" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="ToggleMusic" to="." method="_on_toggle_music_pressed"]
[connection signal="pressed" from="ToggleSFX" to="." method="_on_toggle_sfx_pressed"]
[connection signal="pressed" from="ToggleFullscreen" to="." method="_on_toggle_fullscreen_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="ControlsGraphic/ControlsGradient/BackButton" to="." method="_on_controls_pressed"]
